Update and rename home_1.css to home_2.css

--- a/home_2.css
+++ b/home_2.css
@@ -229,5 +229,5 @@ span.page_nav{margin-top:15px;overflow:hidden;clear:both;display:block;text-alig
 	#menu {display: none;}
 	#header {padding: 0;}
 	#header {position: fixed;background: #1B2D43;left: 0;right: 0;z-index: 999;border-bottom: 1px solid;}
-	#header .menu-trigger{text-align:center;cursor:pointer;position: absolute;top: 0;left: 10px;color: cyan;font-size: 33px;}
+	#header .menu-trigger{display:block;z-index:9999;text-align:center;cursor:pointer;position: absolute;top: 0;left: 10px;color: cyan;font-size: 33px;}
 }
