--- a/blog.v2.css
+++ b/blog.v2.css
@@ -31,6 +31,10 @@ sub div[align="center"] a {display: inline-block;}
 .spoiler dt:after {content: "\f067";position: absolute;right: 10px;}
 .spoiler:hover,.spoiler:hover dt {border-color: darkorchid;background: darkorchid;}
 span.mejs-time-total, .mejs-controls div.mejs-time-rail {width: 70%!important;}
+.warning {padding: 10px;background: #B73131;margin: 10px;font-size: 20px;border: 8px double #1B2D43;text-align: center;color: white;}
+.video_load {width: 100%;height: 360px;position: relative;}
+.load_img {position: absolute;top: 45%;display: inline-block;text-align: center;left: 0;right: 0;}
+.load_img span {display: block;}
 @media only screen and (max-device-width: 860px) {
   .content.clearfix {margin-left: 0!Important;}
   .content ul {margin-left: 0;margin-bottom: 10px;}
