Update and rename flowplayer_v3.css to flowplayer_v4.css

--- a/flowplayer_v4.css
+++ b/flowplayer_v4.css
@@ -336,3 +336,4 @@
 }
 .fp-help,.fp-context-menu {display: none!Important;}
 a[href="http://flowplayer.org"] {opacity: 0;}
+#view_video{background: black;}
