Update and rename flowplayer_v4.css to flowplayer_v5.css

--- a/flowplayer_v5.css
+++ b/flowplayer_v5.css
@@ -22,13 +22,13 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-.flowplayer{position:relative;width:100%;counter-increment:flowplayer;background-size:contain;background-repeat:no-repeat;background-position:center center;display:inline-block;background: black;}
+.flowplayer{position:relative;width:100%;counter-increment:flowplayer;background-size:contain;background-repeat:no-repeat;background-position:center center;display:inline-block;background-repeat: round;      background-position: center center;}
 .flowplayer *{font-weight:inherit;font-family:inherit;font-style:inherit;text-decoration:inherit;font-size:100%;padding:0;border:0;margin:0;list-style-type:none}
 .flowplayer a:focus{outline:0}
 .flowplayer video{width:100%}
 .flowplayer.is-ipad video{-webkit-transform:translateX(-2048px);}
 .is-ready.flowplayer.is-ipad video{-webkit-transform:translateX(0)}
-.flowplayer .fp-player{position:absolute;top:0;left:0;width:100%;height:100%}
+.flowplayer .fp-player{position:absolute;top:0;left:0;width:100%;height:100%;background-repeat: round;      background-position: center center;}
 .flowplayer .fp-engine,.flowplayer .fp-ui,.flowplayer .fp-message{position:absolute;top:0;left:0;width:100%;height:100%;cursor:pointer;z-index:1}
 .flowplayer .fp-ui{z-index:11}
 .flowplayer .fp-message{display:none;text-align:center;padding-top:5%;cursor:default;}
@@ -74,7 +74,7 @@
 .flowplayer .fp-dropdown li.active{background-color:#00a7c8 !important;cursor:default !important}
 .flowplayer .fp-dropdown.fp-dropup{bottom:20px;top:auto;}
 .flowplayer .fp-dropdown.fp-dropup:before{top:auto;bottom:-5px;border-bottom:none;border-top:5px solid rgba(51,51,51,0.9)}
-.flowplayer .fp-tooltip{background-color:#000;color:#fff;display:none;position:absolute;padding:5px;}
+.flowplayer .fp-tooltip{background-color:#000;color:#fff;display:none;position:absolute;padding:5px;width: inherit;}
 .flowplayer .fp-tooltip:before{content:'';display:block;position:absolute;bottom:-5px;width:0;height:0;left:calc(50% - 5px);border-left:5px solid transparent;border-right:5px solid transparent;border-top:5px solid #000}
 .flowplayer .fp-timeline-tooltip{bottom:35px}
 .flowplayer .fp-timeline:hover+.fp-timeline-tooltip{display:block}
@@ -268,7 +268,7 @@
 .flowplayer .fp-embed-code:before{content:'';width:0;height:0;position:absolute;top:2px;right:-10px;border:5px solid transparent;border-left-color:#333}
 .is-rtl.flowplayer .fp-embed-code{right:auto;left:67px;}
 .is-rtl.flowplayer .fp-embed-code:before{right:auto;left:-10px;border-left-color:transparent;border-right-color:#333}
-.flowplayer .fp-embed-code textarea{width:400px;height:16px;font-family:monaco,"courier new",verdana;color:#777;white-space:nowrap;resize:none;overflow:hidden;border:0;outline:0;background-color:transparent;color:#ccc}
+.flowplayer .fp-embed-code textarea{width:400px;height: 50px;font-family:monaco,"courier new",verdana;color:#777;white-space: normal;resize:none;overflow:hidden;border:0;outline:0;background-color:transparent;color:#ccc}
 .flowplayer .fp-embed-code label{display:block;color:#999}
 .flowplayer.is-embedding .fp-embed,.flowplayer.is-embedding .fp-embed-code{display:block;opacity:1;filter:progid:DXImageTransform.Microsoft.Alpha(Opacity=100)}
 .flowplayer.no-time .fp-embed{left:10px !important;}
@@ -294,7 +294,7 @@
 .flowplayer .fp-title{position:absolute;top:10px;left:10px;}
 .is-rtl.flowplayer .fp-title{left:auto;right:10px}
 .flowplayer .fp-title,.flowplayer .fp-unload,.flowplayer .fp-fullscreen,.flowplayer .fp-embed{-webkit-border-radius:3px;-moz-border-radius:3px;border-radius:3px}
-.flowplayer .fp-embed-code{right:85px;}
+.flowplayer .fp-embed-code{right:85px;width: initial;}
 .is-closeable.flowplayer .fp-embed-code{right:125px}
 .is-rtl.flowplayer .fp-embed-code{right:auto;left:85px}
 .flowplayer.is-mouseout .fp-menu{display:none}
@@ -336,4 +336,4 @@
 }
 .fp-help,.fp-context-menu {display: none!Important;}
 a[href="http://flowplayer.org"] {opacity: 0;}
-#view_video{background: black;}
+#view_video{/* background: black; */}
