--- a/flowplayer_v5.css
+++ b/flowplayer_v5.css
@@ -336,4 +336,5 @@
 }
 .fp-help,.fp-context-menu {display: none!Important;}
 a[href="http://flowplayer.org"] {opacity: 0;}
-#view_video{/* background: black; */}
+#view_video{background: black;}
+#vd_google {background-repeat: round;}
