--- a/flowplayer_v5.css
+++ b/flowplayer_v5.css
@@ -337,4 +337,4 @@
 .fp-help,.fp-context-menu {display: none!Important;}
 a[href="http://flowplayer.org"] {opacity: 0;}
 #view_video{background: black;}
-#vd_google {background-repeat: round;}
+#vd_google {background-repeat: round; background-repeat: round;}
